--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
             <div class="gallery-grid">
                 <!-- ここに作品を追加します -->
                 <div class="gallery-item">
-                    <img src="images/thumbnail1.jpg" alt="浮浪者" data-full="images/full1.jpg" data-category="homeless" data-description="彼は家をなくしました。">
+                    <img src="thumbnail1.jpg" alt="浮浪者" data-full="full1.jpg" data-category="homeless" data-description="彼は家をなくしました。">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/thumbnail2.jpg" alt="変顔" data-full="images/full2.jpg" data-category="wack" data-description="面白いですね。">
+                    <img src="thumbnail2.jpg" alt="変顔" data-full="full2.jpg" data-category="wack" data-description="面白いですね。">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/thumbnail3.jpg" alt="アホ面" data-full="images/full3.jpg" data-category="wack" data-description="彼はアホです。">
+                    <img src="thumbnail3.jpg" alt="アホ面" data-full="full3.jpg" data-category="wack" data-description="彼はアホです。">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/thumbnail4.jpg" alt="犯罪者と新井" data-full="images/full4.jpg" data-category="thug" data-description="左側の彼は薬物で逮捕されました。">
+                    <img src="thumbnail4.jpg" alt="犯罪者と新井" data-full="full4.jpg" data-category="thug" data-description="左側の彼は薬物で逮捕されました。">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/thumbnail5.jpg" alt="浮浪者" data-full="images/full5.jpg" data-category="homeless" data-description="彼は汚いところでも寝ることが出来ます。">
+                    <img src="thumbnail5.jpg" alt="浮浪者" data-full="full5.jpg" data-category="homeless" data-description="彼は汚いところでも寝ることが出来ます。">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/thumbnail6.jpg" alt="犯罪者と新井" data-full="images/full6.jpg" data-category="thug" data-description="左側の彼は自転車を盗んで逮捕されました。">
+                    <img src="thumbnail6.jpg" alt="犯罪者と新井" data-full="full6.jpg" data-category="thug" data-description="左側の彼は自転車を盗んで逮捕されました。">
                 </div>
             </div>
         </section>
